--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 **/*/out*
 **/*/.log*
 **/*/.out*
+**/*/.gz
+**/*/.zip
+**/*/.rar
+**/*/.stl
+**/*/.obj
+**/*/VTK
 tutorials/**/0.*
 tutorials/**/*e-*
 tutorials/**/proc*
